media: Folding media/mojo/sevices:lib into mdia/mojo/services

Previously the "lib" was added due to issue 670094. Now that issue
is fixed, and we don't need the intermediate "lib" target any more.

With that, we are also able to fix two other BUGs by rmoving
warning suppression on a few targets, and by reenable
media_service_unittests on Windows component builds.

BUG=676418,676055

media: Remove MEDIA_EXPORT from CdmPromise et al

MEDIA_EXPORT will force to export CdmPromiseTemplate and it's
specializations from the "media" target. However, since most of the
implementations are in the header file, a non-media target could
include cdm_promise.h and trigger template instantiation in the
non-media target. In this case, MEDIA_EXPORT would be wrong.

This CL removes MEDIA_EXPORT from CdmPromise and CdmPromiseTemplate
to avoid such issus. This (no export) is also a common pattern in
other (e.g. base/) template classes.

BUG=656706

Change-Id: Id41b580ee2c91ee25df9e5fb874309969aa2209d