media/mojo/services/mojo_cdm_promise.cc
@@ -59,6 +59,12 @@ void MojoCdmPromise<T...>::reject(CdmPromise::Exception exception,
   callback_.Reset();
 }
 
+template <typename... T>
+CdmPromise::ResolveParameterType MojoCdmPromise<T...>::GetResolveParameterType()
+    const {
+  return CdmPromiseTraits<T...>::kType;
+}
+
 template class MojoCdmPromise<>;
 template class MojoCdmPromise<std::string>;
 
